--- a/timelog.rmd
+++ b/timelog.rmd
@@ -240,4 +240,17 @@ Took off to focus on coursework
 ## 30 March 2020
 
 * *1 hour* Supervisor Meeting
-* *3 hours* Writing section 5 of dissertation
+* *3 hours* Writing section 5 outline of dissertation
+
+## 02 April 2020
+
+* *5 hours* Writing Dissertation section 4
+
+## 03 April 2020
+
+* *5 hours* Writing section 5
+
+## 04 April 2020
+
+* *3 hours* Writing and recording presentation
+
