Final changes before submission - Added submission files and install guidance

--- a/dissertation/l4proj.bib
+++ b/dissertation/l4proj.bib
@@ -58,7 +58,7 @@
 	title = {Improving Programmability and Performance Portability on Many-Core Processors},
 	pages = {277},
 	author = {Steuwer and others},
-	date = {2015},
+	year = {2015},
 	langid = {german},
 	file = {Steuwer - Improving Programmability and Performance Portabil.pdf:C\:\\Users\\euanm\\Zotero\\storage\\Q7NYB2E6\\Steuwer - Improving Programmability and Performance Portabil.pdf:application/pdf}
 }
@@ -206,6 +206,29 @@
 	pages = {42},
 	author = {Steuwer, Michel and Fensch, Christian and Lindley, Sam and Dubach, Christophe},
 	langid = {english},
-	date = {2015},
+	year = {2015},
 	file = {Steuwer et al. - Generating Performance Portable Code using Rewrite.pdf:C\:\\Users\\euanm\\Zotero\\storage\\TMMH3Z6K\\Steuwer et al. - Generating Performance Portable Code using Rewrite.pdf:application/pdf}
+}
+
+
+@inproceedings{DBLP:conf/icfp/SteuwerFLD15,
+  author    = {Michel Steuwer and
+               Christian Fensch and
+               Sam Lindley and
+               Christophe Dubach},
+  editor    = {Kathleen Fisher and
+               John H. Reppy},
+  title     = {Generating performance portable code using rewrite rules: from high-level
+               functional expressions to high-performance OpenCL code},
+  booktitle = {Proceedings of the 20th {ACM} {SIGPLAN} International Conference on
+               Functional Programming, {ICFP} 2015, Vancouver, BC, Canada, September
+               1-3, 2015},
+  pages     = {205--217},
+  publisher = {{ACM}},
+  year      = {2015},
+  url       = {https://doi.org/10.1145/2784731.2784754},
+  doi       = {10.1145/2784731.2784754},
+  timestamp = {Wed, 14 Nov 2018 10:52:41 +0100},
+  biburl    = {https://dblp.org/rec/conf/icfp/SteuwerFLD15.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
