--- a/timelog.rmd
+++ b/timelog.rmd
@@ -254,3 +254,7 @@ Took off to focus on coursework
 
 * *3 hours* Writing and recording presentation
 
+## 06 April 2020
+
+* *6 hours* Final pass on Dissertation and touching up repository before submission
+
